--- a/adminstyle.css
+++ b/adminstyle.css
@@ -147,21 +147,11 @@ body {
     color: rgba(255, 255, 255, 0.7);
   }
 
-  .container{
-    background-image: linear-gradient(180deg, rgb(242, 255, 237), rgb(199, 227, 189));
-    width: 700px;
-    margin: 0 auto;
-    padding-top: 1px;
-    padding-bottom: 5px;
-    grid-column: 1 / span 4;
-    border-radius: 6px;
-    border: 1px solid;
-  }
 
   
 
 
-.countdown-section {
+.add-section {
     z-index: 100;
     position: relative;
     left: -20px;
@@ -171,7 +161,7 @@ body {
     color: #000000;
     padding-right: 170px;
     padding-bottom: 20px;
-    padding-top: 50px;
+    padding-top: 200px;
     align-items: center;
     
   
@@ -202,52 +192,6 @@ body {
   justify-content: space-between;
   
 }
-
-
-.commentsection{
-  background-image: linear-gradient(180deg, rgb(242, 255, 237), rgb(199, 227, 189));
- 
-  padding-top: 1px;
-  padding-bottom: 5px;
-  grid-column: 2 / span 10;
-  border-radius: 6px;
-  border: 1px solid;
-}
-.comment, .reply{
-  margin-top: 5px;
-  padding: 10px;
-  border-bottom: 1px solid black;
-}
-.reply{
-  border: 1px solid #ccc;
-}
-p{
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-form{
-  margin: 10px;
-}
-form h3{
-  margin-bottom: 5px;
-}
-form input, form textarea{
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-}
-form button.submit, button{
-  background: #4CAF50;
-  color: white;
-  border: 1px solid;
-  border-radius: 6px;
-  cursor: pointer;
-  padding: 10px 20px;
-  width: 100%;
-}
-
-
-
 
 main {
   max-width: 1400px;
@@ -343,7 +287,6 @@ main .card {
   grid-template-rows: span 4;
 }
 
-
 footer{
   height:100px;
   padding: 20px 40px;
@@ -386,84 +329,6 @@ footer nav a {
 }
 
 
-@media screen and (max-width: 960px) {
-  .navbar-brand {
-    position: relative;
-    font-size: 100%;
-    right: 20px;
-  }
-  .navbar-brand span {
-    position: relative;
-    font-size: 100%;
-  }
-  .navbar-nav {
-    position: relative;
-    padding-right: 0;
-    display: flex;
-    justify-content: center;
-  }
-  .navbar-nav .nav-item {
-    font-size: 100%;
-    position: relative;
-    left: 170px;
-  }
-  .header .img-content h2 {
-    font-size: 280%;
-  }
-  header .events-section {
-    grid-column: 3 / span 8;
-    text-align: center;
-  }
-
-  .commentsection{
-    padding-top: 1px;
-    padding-bottom: 5px;
-    grid-column: 2/ span 10;
-  }
-
-  .commentsection .form{
-    padding-top: 1px;
-    padding-bottom: 5px;
-    grid-column: 1 / span 4;
-  }
-
-  .countdown-section h1 {
-    position: relative;
-    right: 80px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-  }
-  .countdown .time{
-    position: relative;
-    right: 100px;
-    grid-column: 1/span 2;
-  }
-  main .img-detail {
-    grid-column: 2/span 10;
-  }
-
-  main .welcome {
-    grid-column: 2/span 10;
-  }
-  main .date {
-    grid-column: 2/span 10;
-  }
-
-
-  main .card {
-    grid-column: 3 / span 8;
-  }
-  main .card img{
-    width: 210px ;
-    height: 180px ;
-  }
+@media screen and (max-width: 960px){
  
-  footer h1 {
-    font-size: 80%;
-  }
-  footer .foot-link{
-    grid-column: 2 / span 10;
-    font-size: 80%;
-  }
 }
