--- a/backupstyle.css
+++ b/backupstyle.css
@@ -23,7 +23,7 @@ body {
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  background: rgb(242, 255, 237);
+  background: #FFFDF5;
 
 }
 
@@ -91,23 +91,28 @@ body {
     text-align: right;
     list-style-type: none;
   }
+
   .header {
     margin: 0;
     padding: 0;
-    background-color: rgb(242, 255, 237);
+    background-color: #000000;
+    
   }
   
   .header .img-parent {
     position: relative;
+    
   }
   
   .header img {
     background-color: #000000;
     height: 100vh;
     width: 100%;
+  
   }
   
   .header .img-overlay {
+    
     position: absolute;
     top: 0;
     left: 0;
@@ -147,107 +152,26 @@ body {
     color: rgba(255, 255, 255, 0.7);
   }
 
-  .container{
-    background-image: linear-gradient(180deg, rgb(242, 255, 237), rgb(199, 227, 189));
-    width: 700px;
-    margin: 0 auto;
-    padding-top: 1px;
-    padding-bottom: 5px;
-    grid-column: 1 / span 4;
-    border-radius: 6px;
-    border: 1px solid;
-  }
 
-  
-
-
-.countdown-section {
-    z-index: 100;
-    position: relative;
-    left: -20px;
-    top: 40px;
-    font-weight: bold;
-    grid-column: 5 / span 6;
-    color: #000000;
-    padding-right: 170px;
+  section .events-section{
+    margin-top: 20px;
+    grid-column: span 12;
+    text-align: center;
+    font-size: 1.5em;
+    padding-top: 20px;
     padding-bottom: 20px;
-    padding-top: 50px;
-    align-items: center;
-    
-  
-}
+    color: #0a2700;
+    /*background-image: linear-gradient(180deg, rgb(26, 41, 20), rgb(111, 157, 80));*/
+    background-image: linear-gradient(180deg, rgba(26, 41, 20, 0), rgba(162, 195, 141, 0.544));
+    /*border-bottom: 6px solid;
+    border-top: 6px solid;*/
+    border: 1px solid;
+    border-radius: 6px;
+} 
 
-
-.countdown {
+section .events-section h2{
   font-weight: bold;
-  display: flex;
-  color: #000000;
-  padding: 20px;
-
 }
-
-.countdown h1 {
-  font-weight: bold;
-  grid-column: 12;
-}
-
-.countdown .time {
-  border: 1px solid;
-  align-items: center;
-  text-align: center;
-  padding: 10px 20px;
-  border-radius: 6px;
-  font-weight: bold;
-  gap: 20px;
-  justify-content: space-between;
-  
-}
-
-
-.commentsection{
-  background-image: linear-gradient(180deg, rgb(242, 255, 237), rgb(199, 227, 189));
- 
-  padding-top: 1px;
-  padding-bottom: 5px;
-  grid-column: 2 / span 10;
-  border-radius: 6px;
-  border: 1px solid;
-}
-.comment, .reply{
-  margin-top: 5px;
-  padding: 10px;
-  border-bottom: 1px solid black;
-}
-.reply{
-  border: 1px solid #ccc;
-}
-p{
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-form{
-  margin: 10px;
-}
-form h3{
-  margin-bottom: 5px;
-}
-form input, form textarea{
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-}
-form button.submit, button{
-  background: #4CAF50;
-  color: white;
-  border: 1px solid;
-  border-radius: 6px;
-  cursor: pointer;
-  padding: 10px 20px;
-  width: 100%;
-}
-
-
-
 
 main {
   max-width: 1400px;
@@ -260,7 +184,7 @@ main {
  
 }
 main img {
-  grid-column: 3 /span 8;
+  grid-column: 2 /span 6;
   width: 100%;
   border-radius: 6px;
   transition: 0.6s;
@@ -274,11 +198,10 @@ main img:hover{
   background-color: rgb(255, 255, 255);
 }
 main .date {
-  grid-column:  4 / span 6;
-  color: #0a2700;
-  background-image: linear-gradient(180deg, rgba(26, 41, 20, 0), rgba(162, 195, 141, 0.544));
+  grid-column:  1/ span 1;
+
   align-items:center;
-  /*color: rgb(17, 55, 2);*/
+  color: rgb(17, 55, 2);
   border-radius: 6px;
   padding: 10px;
   display:grid;
@@ -298,9 +221,8 @@ main .date h2{
 }
 
 main .welcome {
-  text-align: center;
   background-color: rgb(230, 255, 230);
-  grid-column: 3 / span 8;
+  grid-column: 8 / span 6;
   grid-template-rows: span 4;
   color: #000000;
   border-bottom: 1px solid;
@@ -312,11 +234,18 @@ main .welcome {
 
 main .welcome h2{
   font-size: 150%;
+  font-weight: bold;
+  
+}
+
+main .welcome p{
+  font-size: 100%;
+   
 }
 
 main .welcome a{
-  padding-top: 100px;
- }
+  font-size: 120%;
+}
 
 main > h2 {
   font-weight: bold;
@@ -386,84 +315,23 @@ footer nav a {
 }
 
 
-@media screen and (max-width: 960px) {
-  .navbar-brand {
-    position: relative;
-    font-size: 100%;
-    right: 20px;
-  }
-  .navbar-brand span {
-    position: relative;
-    font-size: 100%;
-  }
-  .navbar-nav {
-    position: relative;
-    padding-right: 0;
-    display: flex;
-    justify-content: center;
-  }
-  .navbar-nav .nav-item {
-    font-size: 100%;
-    position: relative;
-    left: 170px;
-  }
-  .header .img-content h2 {
-    font-size: 280%;
-  }
+@media screen and (max-width: 960px){
   header .events-section {
-    grid-column: 3 / span 8;
-    text-align: center;
+      grid-column: 3 / span 8;
+      text-align: center;
   }
-
-  .commentsection{
-    padding-top: 1px;
-    padding-bottom: 5px;
-    grid-column: 2/ span 10;
-  }
-
-  .commentsection .form{
-    padding-top: 1px;
-    padding-bottom: 5px;
-    grid-column: 1 / span 4;
-  }
-
-  .countdown-section h1 {
-    position: relative;
-    right: 80px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-  }
-  .countdown .time{
-    position: relative;
-    right: 100px;
-    grid-column: 1/span 2;
-  }
-  main .img-detail {
-    grid-column: 2/span 10;
-  }
-
-  main .welcome {
-    grid-column: 2/span 10;
+  main img {
+      grid-column: 2 / span 10;
   }
   main .date {
-    grid-column: 2/span 10;
+      grid-column: 3 / span 8;
+      text-align: center;
   }
-
-
+  main .welcome {
+      grid-column: 3 / span 8;
+      text-align: center;
+  }
   main .card {
-    grid-column: 3 / span 8;
-  }
-  main .card img{
-    width: 210px ;
-    height: 180px ;
-  }
- 
-  footer h1 {
-    font-size: 80%;
-  }
-  footer .foot-link{
-    grid-column: 2 / span 10;
-    font-size: 80%;
-  }
+      grid-column: 3 / span 8;
+}
 }
