--- a/eventstyling2.css
+++ b/eventstyling2.css
@@ -33,7 +33,6 @@ body {
     justify-content: space-between;
     z-index: 1030;
     /*background: #0000005f;*/
-    
     transition: 0.5s;
 }
 .navbar.scroll{
@@ -183,6 +182,71 @@ main {
   margin-bottom: 0;
  
 }
+
+.event-container {
+  grid-column: 2/span 10;
+}
+
+
+.sort-events {
+  position: relative;
+  top: 50px;
+  grid-column: 4 /span 8;
+  gap: 10px;
+  font-size: 140%;
+  font-weight: bold;
+
+  display: flex;
+  padding-top: 30px;
+  
+}
+
+.sort-events p{
+  
+  font-size: 100%;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-right: 20px;
+  display: flex;
+  align-items: center;
+  
+}
+
+.sort-events a{
+ 
+  border-radius: 6px;
+  grid-column: 9 / span 7;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 2px;
+  
+
+  padding-left: 20px;
+
+}
+
+.event-item {
+  max-width: 1400px;
+  margin: auto;
+  padding: 50px;
+  border-radius: 6px;
+  margin-top: 0;
+  margin-bottom: 0;
+  grid-column: 2/span 10;
+ 
+}
+.event-item img {
+  grid-column: 2 /span 6;
+  width: 100%;
+  border-radius: 6px;
+  transition: 0.6s;
+  background-color: rgb(17, 55, 2) ;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 main img {
   grid-column: 2 /span 6;
   width: 100%;
@@ -192,12 +256,13 @@ main img {
   padding: 5px;
 }
 
+
 main img:hover{
   transform:scale(1.05) ;
   cursor: pointer;
   background-color: rgb(255, 255, 255);
 }
-main .date {
+main .event-item .date {
   grid-column:  1/ span 1;
 
   align-items:center;
@@ -220,7 +285,7 @@ main .date h2{
   
 }
 
-main .welcome {
+main .event-item .welcome {
   background-color: rgb(230, 255, 230);
   grid-column: 8 / span 6;
   grid-template-rows: span 4;
@@ -229,6 +294,7 @@ main .welcome {
   padding: 10px;
   padding-bottom: 20px;
   border-radius: 6px;
+  text-align: center;
   /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.342);*/
 }
 
@@ -270,6 +336,11 @@ main .card {
   border-radius: 6px;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.342);
   grid-template-rows: span 4;
+}
+
+main .card img{
+  width: 300px ;
+  height: 200px ;
 }
 
 
@@ -315,23 +386,63 @@ footer nav a {
 }
 
 
-@media screen and (max-width: 960px){
+@media screen and (max-width: 960px) {
+  .navbar-brand {
+    position: relative;
+    font-size: 100%;
+    right: 20px;
+  }
+  .navbar-brand span {
+    position: relative;
+    font-size: 100%;
+  }
+  .navbar-nav {
+    position: relative;
+    padding-right: 0;
+    display: flex;
+    justify-content: center;
+  }
+  .navbar-nav .nav-item {
+    font-size: 100%;
+    position: relative;
+    left: 170px;
+  }
+  .header .img-content h2 {
+    font-size: 280%;
+  }
   header .events-section {
-      grid-column: 3 / span 8;
-      text-align: center;
+    grid-column: 3 / span 8;
+    text-align: center;
   }
   main img {
-      grid-column: 2 / span 10;
+    grid-column: 2 / span 10;
   }
-  main .date {
-      grid-column: 3 / span 8;
-      text-align: center;
+  .event-item .date {
+    grid-column: 3 / span 8;
+    text-align: center;
+    font-size: 150%;
   }
   main .welcome {
-      grid-column: 3 / span 8;
-      text-align: center;
+    grid-column: 3 / span 8;
+    text-align: center;
   }
   main .card {
-      grid-column: 3 / span 8;
-}
+    grid-column: 3 / span 8;
+  }
+  main .card img{
+    width: 210px ;
+    height: 180px ;
+  }
+  .sort-events {
+    font-size: 90%;
+    grid-column: 2/ span 10;
+    text-align: center;
+  }
+  footer h1 {
+    font-size: 80%;
+  }
+  footer .foot-link{
+    grid-column: 2 / span 10;
+    font-size: 80%;
+  }
 }
